--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,44 +1,42 @@
 {
-  "@@locale": "es",
   "appTitle": "Firma PDF",
-  "errorWithMessage": "Error: {message}",
-
-  "settings": "Ajustes",
-  "theme": "Tema",
-  "themeLight": "Claro",
-  "themeDark": "Oscuro",
-  "themeSystem": "Del sistema",
-  "language": "Idioma",
-  "languageEnglish": "Inglés",
-  "languageChineseTraditional": "Chino tradicional",
-  "languageSpanish": "Español",
-  "resetToDefaults": "Restablecer valores",
-
-  "openPdf": "Abrir PDF…",
-  "prev": "Anterior",
-  "next": "Siguiente",
-  "pageInfo": "Página {current}/{total}",
-  "goTo": "Ir a:",
-  "dpi": "DPI:",
-  "saveSignedPdf": "Guardar PDF firmado",
-  "loadSignatureFromFile": "Cargar firma desde archivo",
-  "drawSignature": "Dibujar firma",
-  "noPdfLoaded": "No hay PDF cargado",
-  "signature": "Firma",
-  "lockAspectRatio": "Bloquear relación de aspecto",
-  "backgroundRemoval": "Eliminación de fondo",
-  "contrast": "Contraste",
+  "backgroundRemoval": "Eliminar fondo",
   "brightness": "Brillo",
-  "exportingPleaseWait": "Exportando... Por favor espera",
-
-  "nothingToSaveYet": "Nada que guardar todavía",
-  "savedWithPath": "Guardado: {path}",
-  "failedToSavePdf": "Error al guardar el PDF",
-  "downloadStarted": "Descarga iniciada",
-  "failedToGeneratePdf": "Error al generar el PDF",
-  "invalidOrUnsupportedFile": "Archivo no válido o no compatible",
-
+  "clear": "Limpiar",
   "confirm": "Confirmar",
-  "undo": "Deshacer",
-  "clear": "Limpiar"
+  "contrast": "Contraste",
+  "createNewSignature": "Crear nueva firma",
+  "delete": "Eliminar",
+  "downloadStarted": "Descarga iniciada",
+  "dpi": "DPI:",
+  "drawSignature": "Dibujar firma",
+  "errorWithMessage": "Error: {message}",
+  "exportingPleaseWait": "Exportando... Por favor, espere",
+  "failedToGeneratePdf": "No se pudo generar el PDF",
+  "failedToSavePdf": "No se pudo guardar el PDF",
+  "goTo": "Ir a:",
+  "invalidOrUnsupportedFile": "Archivo inválido o no compatible",
+  "language": "Idioma",
+  "languageChineseTraditional": "Chino tradicional",
+  "languageEnglish": "Inglés",
+  "languageSpanish": "Español",
+  "loadSignatureFromFile": "Cargar firma desde archivo",
+  "lockAspectRatio": "Bloquear relación de aspecto",
+  "longPressOrRightClickTheSignatureToConfirmOrDelete": "Pulse prolongadamente o haga clic derecho en la firma para confirmar o eliminar.",
+  "next": "Siguiente",
+  "noPdfLoaded": "No se ha cargado ningún PDF",
+  "nothingToSaveYet": "Aún no hay nada que guardar",
+  "openPdf": "Abrir PDF...",
+  "pageInfo": "Página {current}/{total}",
+  "prev": "Anterior",
+  "resetToDefaults": "Restablecer valores predeterminados",
+  "savedWithPath": "Guardado: {path}",
+  "saveSignedPdf": "Guardar PDF firmado",
+  "settings": "Ajustes",
+  "signature": "Firma",
+  "theme": "Tema",
+  "themeDark": "Oscuro",
+  "themeLight": "Claro",
+  "themeSystem": "Sistema",
+  "undo": "Deshacer"
 }
