--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -1,44 +1,43 @@
 {
   "@@locale": "zh_TW",
   "appTitle": "PDF 簽名",
-  "errorWithMessage": "錯誤：{message}",
-
-  "settings": "設定",
-  "theme": "主題",
-  "themeLight": "淺色",
-  "themeDark": "深色",
-  "themeSystem": "系統",
-  "language": "語言",
-  "languageEnglish": "英文",
-  "languageChineseTraditional": "繁體中文",
-  "languageSpanish": "西班牙文",
-  "resetToDefaults": "重設為預設值",
-
-  "openPdf": "開啟 PDF…",
-  "prev": "上一頁",
-  "next": "下一頁",
-  "pageInfo": "第 {current}/{total} 頁",
-  "goTo": "前往：",
-  "dpi": "DPI：",
-  "saveSignedPdf": "儲存已簽名 PDF",
-  "loadSignatureFromFile": "從檔案載入簽名",
-  "drawSignature": "手寫簽名",
-  "noPdfLoaded": "尚未載入 PDF",
-  "signature": "簽名",
-  "lockAspectRatio": "鎖定長寬比",
   "backgroundRemoval": "去除背景",
-  "contrast": "對比",
   "brightness": "亮度",
-  "exportingPleaseWait": "匯出中…請稍候",
-
-  "nothingToSaveYet": "尚無可儲存的內容",
-  "savedWithPath": "已儲存：{path}",
-  "failedToSavePdf": "儲存 PDF 失敗",
-  "downloadStarted": "已開始下載",
-  "failedToGeneratePdf": "產生 PDF 失敗",
-  "invalidOrUnsupportedFile": "無效或不支援的檔案",
-
+  "clear": "清除",
   "confirm": "確認",
-  "undo": "復原",
-  "clear": "清除"
+  "contrast": "對比",
+  "createNewSignature": "建立新簽名",
+  "delete": "刪除",
+  "downloadStarted": "已開始下載",
+  "dpi": "DPI：",
+  "drawSignature": "手寫簽名",
+  "errorWithMessage": "錯誤：{message}",
+  "exportingPleaseWait": "匯出中…請稍候",
+  "failedToGeneratePdf": "產生 PDF 失敗",
+  "failedToSavePdf": "儲存 PDF 失敗",
+  "goTo": "前往：",
+  "invalidOrUnsupportedFile": "無效或不支援的檔案",
+  "language": "語言",
+  "languageChineseTraditional": "繁體中文",
+  "languageEnglish": "英文",
+  "languageSpanish": "西班牙文",
+  "loadSignatureFromFile": "從檔案載入簽名",
+  "lockAspectRatio": "鎖定長寬比",
+  "longPressOrRightClickTheSignatureToConfirmOrDelete": "長按或右鍵點擊簽名以確認或刪除。",
+  "next": "下一頁",
+  "noPdfLoaded": "尚未載入 PDF",
+  "nothingToSaveYet": "尚無可儲存的內容",
+  "openPdf": "開啟 PDF…",
+  "pageInfo": "第 {current}/{total} 頁",
+  "prev": "上一頁",
+  "resetToDefaults": "重設為預設值",
+  "savedWithPath": "已儲存：{path}",
+  "saveSignedPdf": "儲存已簽名 PDF",
+  "settings": "設定",
+  "signature": "簽名",
+  "theme": "主題",
+  "themeDark": "深色",
+  "themeLight": "淺色",
+  "themeSystem": "系統",
+  "undo": "復原"
 }
