feat: partially implement new UI design

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2,11 +2,14 @@
   "appTitle": "PDF-Signatur",
   "backgroundRemoval": "Hintergrund entfernen",
   "brightness": "Helligkeit",
+  "cancel": "Abbrechen",
   "clear": "Löschen",
+  "close": "Schließen",
   "confirm": "Bestätigen",
   "contrast": "Kontrast",
   "createNewSignature": "Neue Signatur erstellen",
   "delete": "Löschen",
+  "display": "Anzeige",
   "downloadStarted": "Download gestartet",
   "dpi": "DPI:",
   "drawSignature": "Signatur zeichnen",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "Exportiere… Bitte warten",
   "failedToGeneratePdf": "PDF konnte nicht generiert werden",
   "failedToSavePdf": "PDF konnte nicht gespeichert werden",
+  "general": "Allgemein",
   "goTo": "Gehe zu:",
   "invalidOrUnsupportedFile": "Ungültige oder nicht unterstützte Datei",
   "language": "Sprache",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "Noch nichts zu speichern",
   "openPdf": "PDF öffnen...",
   "pageInfo": "Seite {current}/{total}",
+  "pageView": "Seitenansicht",
+  "pageViewContinuous": "Kontinuierlich",
+  "pageViewSingle": "Einzelne Seite",
   "prev": "Vorherige",
   "resetToDefaults": "Auf Standardwerte zurücksetzen",
+  "save": "Speichern",
   "savedWithPath": "Gespeichert: {path}",
   "saveSignedPdf": "Signiertes PDF speichern",
   "settings": "Einstellungen",
