--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,8 +6,12 @@
   "@backgroundRemoval": {},
   "brightness": "Brightness",
   "@brightness": {},
+  "cancel": "Cancel",
+  "@cancel": {},
   "clear": "Clear",
   "@clear": {},
+  "close": "Close",
+  "@close": {},
   "confirm": "Confirm",
   "@confirm": {},
   "contrast": "Contrast",
@@ -16,6 +20,8 @@
   "@createNewSignature": {},
   "delete": "Delete",
   "@delete": {},
+  "display": "Display",
+  "@display": {},
   "downloadStarted": "Download started",
   "@downloadStarted": {},
   "dpi": "DPI:",
@@ -37,6 +43,8 @@
   "@failedToGeneratePdf": {},
   "failedToSavePdf": "Failed to save PDF",
   "@failedToSavePdf": {},
+  "general": "General",
+  "@general": {},
   "goTo": "Go to:",
   "@goTo": {},
   "invalidOrUnsupportedFile": "Invalid or unsupported file",
@@ -69,10 +77,18 @@
       }
     }
   },
+  "pageView": "Page view",
+  "@pageView": {},
+  "pageViewContinuous": "Continuous",
+  "@pageViewContinuous": {},
+  "pageViewSingle": "Single page",
+  "@pageViewSingle": {},
   "prev": "Prev",
   "@prev": {},
   "resetToDefaults": "Reset to defaults",
   "@resetToDefaults": {},
+  "save": "Save",
+  "@save": {},
   "savedWithPath": "Saved: {path}",
   "@savedWithPath": {
     "description": "Snackbar text showing where file saved",
