--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -2,11 +2,14 @@
   "appTitle": "Firma PDF",
   "backgroundRemoval": "Eliminar fondo",
   "brightness": "Brillo",
+  "cancel": "Cancelar",
   "clear": "Limpiar",
+  "close": "Cerrar",
   "confirm": "Confirmar",
   "contrast": "Contraste",
   "createNewSignature": "Crear nueva firma",
   "delete": "Eliminar",
+  "display": "Pantalla",
   "downloadStarted": "Descarga iniciada",
   "dpi": "DPI:",
   "drawSignature": "Dibujar firma",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "Exportando... Por favor, espere",
   "failedToGeneratePdf": "No se pudo generar el PDF",
   "failedToSavePdf": "No se pudo guardar el PDF",
+  "general": "General",
   "goTo": "Ir a:",
   "invalidOrUnsupportedFile": "Archivo inválido o no compatible",
   "language": "Idioma",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "Aún no hay nada que guardar",
   "openPdf": "Abrir PDF...",
   "pageInfo": "Página {current}/{total}",
+  "pageView": "Vista de página",
+  "pageViewContinuous": "Continuo",
+  "pageViewSingle": "Página única",
   "prev": "Anterior",
   "resetToDefaults": "Restablecer valores predeterminados",
+  "save": "Guardar",
   "savedWithPath": "Guardado: {path}",
   "saveSignedPdf": "Guardar PDF firmado",
   "settings": "Ajustes",
