--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -2,11 +2,14 @@
   "appTitle": "Signature PDF",
   "backgroundRemoval": "Suppression de l'arrière-plan",
   "brightness": "Luminosité",
+  "cancel": "Annuler",
   "clear": "Effacer",
+  "close": "Fermer",
   "confirm": "Confirmer",
   "contrast": "Contraste",
   "createNewSignature": "Créer une nouvelle signature",
   "delete": "Supprimer",
+  "display": "Affichage",
   "downloadStarted": "Téléchargement commencé",
   "dpi": "DPI :",
   "drawSignature": "Dessiner une signature",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "Exportation… Veuillez patienter",
   "failedToGeneratePdf": "Échec de la génération du PDF",
   "failedToSavePdf": "Échec de l'enregistrement du PDF",
+  "general": "Général",
   "goTo": "Aller à :",
   "invalidOrUnsupportedFile": "Fichier invalide ou non pris en charge",
   "language": "Langue",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "Rien à enregistrer pour le moment",
   "openPdf": "Ouvrir un PDF...",
   "pageInfo": "Page {current}/{total}",
+  "pageView": "Affichage de la page",
+  "pageViewContinuous": "Continu",
+  "pageViewSingle": "Page unique",
   "prev": "Précédent",
   "resetToDefaults": "Rétablir les valeurs par défaut",
+  "save": "Enregistrer",
   "savedWithPath": "Enregistré : {path}",
   "saveSignedPdf": "Enregistrer le PDF signé",
   "settings": "Paramètres",
