--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -2,11 +2,14 @@
   "appTitle": "PDF署名",
   "backgroundRemoval": "背景除去",
   "brightness": "明るさ",
+  "cancel": "キャンセル",
   "clear": "クリア",
+  "close": "閉じる",
   "confirm": "確認",
   "contrast": "コントラスト",
   "createNewSignature": "新しい署名を作成",
   "delete": "削除",
+  "display": "表示",
   "downloadStarted": "ダウンロード開始",
   "dpi": "DPI：",
   "drawSignature": "署名をかく",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "エクスポート中…お待ちください",
   "failedToGeneratePdf": "PDFの生成に失敗しました",
   "failedToSavePdf": "PDFの保存に失敗しました",
+  "general": "一般",
   "goTo": "移動：",
   "invalidOrUnsupportedFile": "無効なファイルまたはサポートされていないファイル",
   "language": "言語",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "まだ保存するものがありません",
   "openPdf": "PDFを開く…",
   "pageInfo": "ページ {current}/{total}",
+  "pageView": "ページ表示",
+  "pageViewContinuous": "連続",
+  "pageViewSingle": "シングルページ",
   "prev": "前へ",
   "resetToDefaults": "デフォルトに戻す",
+  "save": "保存",
   "savedWithPath": "保存しました：{path}",
   "saveSignedPdf": "署名済みPDFを保存",
   "settings": "設定",
