--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -2,11 +2,14 @@
   "appTitle": "PDF 서명",
   "backgroundRemoval": "배경 제거",
   "brightness": "밝기",
+  "cancel": "취소",
   "clear": "지우기",
+  "close": "닫기",
   "confirm": "확인",
   "contrast": "대비",
   "createNewSignature": "새 서명 만들기",
   "delete": "삭제",
+  "display": "표시",
   "downloadStarted": "다운로드 시작됨",
   "dpi": "DPI:",
   "drawSignature": "서명 그리기",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "내보내는 중... 잠시 기다려주세요",
   "failedToGeneratePdf": "PDF 생성 실패",
   "failedToSavePdf": "PDF 저장 실패",
+  "general": "일반",
   "goTo": "이동:",
   "invalidOrUnsupportedFile": "잘못된 파일이거나 지원되지 않는 파일입니다.",
   "language": "언어",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "아직 저장할 내용이 없습니다.",
   "openPdf": "PDF 열기...",
   "pageInfo": "{current}/{total} 페이지",
+  "pageView": "페이지 보기",
+  "pageViewContinuous": "연속",
+  "pageViewSingle": "단일 페이지",
   "prev": "이전",
   "resetToDefaults": "기본값으로 재설정",
+  "save": "저장",
   "savedWithPath": "{path}에 저장됨",
   "saveSignedPdf": "서명된 PDF 저장",
   "settings": "설정",
