--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -2,11 +2,14 @@
   "appTitle": "Підпис PDF",
   "backgroundRemoval": "Видалення фону",
   "brightness": "Яскравість",
+  "cancel": "Скасувати",
   "clear": "Очистити",
+  "close": "Закрити",
   "confirm": "Підтвердити",
   "contrast": "Контрастність",
   "createNewSignature": "Створити новий підпис",
   "delete": "Видалити",
+  "display": "Відображення",
   "downloadStarted": "Завантаження розпочато",
   "dpi": "DPI:",
   "drawSignature": "Намалювати підпис",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "Експортування... Зачекайте",
   "failedToGeneratePdf": "Не вдалося створити PDF",
   "failedToSavePdf": "Не вдалося зберегти PDF",
+  "general": "Загальні",
   "goTo": "Перейти до:",
   "invalidOrUnsupportedFile": "Недійсний або непідтримуваний файл",
   "language": "Мова",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "Ще нічого не потрібно зберігати",
   "openPdf": "Відкрити PDF...",
   "pageInfo": "Сторінка {current}/{total}",
+  "pageView": "Перегляд сторінки",
+  "pageViewContinuous": "Безперервний",
+  "pageViewSingle": "Одна сторінка",
   "prev": "Попередня",
   "resetToDefaults": "Скинути до значень за замовчуванням",
+  "save": "Зберегти",
   "savedWithPath": "Збережено: {path}",
   "saveSignedPdf": "Зберегти підписаний PDF",
   "settings": "Налаштування",
