--- a/lib/l10n/app_zh_CN.arb
+++ b/lib/l10n/app_zh_CN.arb
@@ -2,11 +2,14 @@
   "appTitle": "PDF 签名",
   "backgroundRemoval": "背景移除",
   "brightness": "亮度",
+  "cancel": "取消",
   "clear": "清除",
+  "close": "关闭",
   "confirm": "确认",
   "contrast": "对比度",
   "createNewSignature": "创建新的签名",
   "delete": "删除",
+  "display": "显示",
   "downloadStarted": "下载已开始",
   "dpi": "DPI：",
   "drawSignature": "绘制签名",
@@ -14,6 +17,7 @@
   "exportingPleaseWait": "正在导出... 请稍候",
   "failedToGeneratePdf": "PDF 生成失败",
   "failedToSavePdf": "PDF 保存失败",
+  "general": "常规",
   "goTo": "跳转到：",
   "invalidOrUnsupportedFile": "无效或不支持的文件",
   "language": "语言",
@@ -25,8 +29,12 @@
   "nothingToSaveYet": "尚无内容保存",
   "openPdf": "打开 PDF...",
   "pageInfo": "第 {current} 页 / 共 {total} 页",
+  "pageView": "分页浏览",
+  "pageViewContinuous": "连续",
+  "pageViewSingle": "单页",
   "prev": "上一页",
   "resetToDefaults": "恢复默认值",
+  "save": "保存",
   "savedWithPath": "已保存：{path}",
   "saveSignedPdf": "保存已签名的 PDF",
   "settings": "设置",
