--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -3,11 +3,14 @@
   "appTitle": "PDF 簽名",
   "backgroundRemoval": "去除背景",
   "brightness": "亮度",
+  "cancel": "取消",
   "clear": "清除",
+  "close": "關閉",
   "confirm": "確認",
   "contrast": "對比",
   "createNewSignature": "建立新簽名",
   "delete": "刪除",
+  "display": "顯示",
   "downloadStarted": "已開始下載",
   "dpi": "DPI：",
   "drawSignature": "手寫簽名",
@@ -15,6 +18,7 @@
   "exportingPleaseWait": "匯出中…請稍候",
   "failedToGeneratePdf": "產生 PDF 失敗",
   "failedToSavePdf": "儲存 PDF 失敗",
+  "general": "一般",
   "goTo": "前往：",
   "invalidOrUnsupportedFile": "無效或不支援的檔案",
   "language": "語言",
@@ -26,8 +30,12 @@
   "nothingToSaveYet": "尚無可儲存的內容",
   "openPdf": "開啟 PDF…",
   "pageInfo": "第 {current}/{total} 頁",
+  "pageView": "頁面檢視",
+  "pageViewContinuous": "連續",
+  "pageViewSingle": "單頁",
   "prev": "上一頁",
   "resetToDefaults": "重設為預設值",
+  "save": "儲存",
   "savedWithPath": "已儲存：{path}",
   "saveSignedPdf": "儲存已簽名 PDF",
   "settings": "設定",
