--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -27,6 +27,7 @@
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "長按或右鍵點擊簽名以確認或刪除。",
   "next": "下一頁",
   "noPdfLoaded": "尚未載入 PDF",
+  "noSignatureLoaded": "未載入任何簽名",
   "nothingToSaveYet": "尚無可儲存的內容",
   "openPdf": "開啟 PDF…",
   "pageInfo": "第 {current}/{total} 頁",
