refactor: adjust some text layout in pdf toolbar

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -11,7 +11,7 @@
   "delete": "Löschen",
   "display": "Anzeige",
   "downloadStarted": "Download gestartet",
-  "dpi": "DPI:",
+  "dpi": "DPI",
   "drawSignature": "Signatur zeichnen",
   "errorWithMessage": "Fehler: {message}",
   "exportingPleaseWait": "Exportiere… Bitte warten",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "PDF konnte nicht gespeichert werden",
   "general": "Allgemein",
   "goTo": "Gehe zu:",
+  "image": "Bild",
   "invalidOrUnsupportedFile": "Ungültige oder nicht unterstützte Datei",
   "language": "Sprache",
   "loadSignatureFromFile": "Signatur aus Datei laden",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "Kontinuierlich",
   "prev": "Vorherige",
   "resetToDefaults": "Auf Standardwerte zurücksetzen",
+  "rotate": "Drehen",
   "save": "Speichern",
   "savedWithPath": "Gespeichert: {path}",
   "saveSignedPdf": "Signiertes PDF speichern",
