--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -24,7 +24,7 @@
   "@display": {},
   "downloadStarted": "Download started",
   "@downloadStarted": {},
-  "dpi": "DPI:",
+  "dpi": "DPI",
   "@dpi": {},
   "drawSignature": "Draw Signature",
   "@drawSignature": {},
@@ -47,6 +47,8 @@
   "@general": {},
   "goTo": "Go to:",
   "@goTo": {},
+  "image": "Image",
+  "@image": {},
   "invalidOrUnsupportedFile": "Invalid or unsupported file",
   "@invalidOrUnsupportedFile": {},
   "language": "Language",
@@ -87,6 +89,8 @@
   "@prev": {},
   "resetToDefaults": "Reset to defaults",
   "@resetToDefaults": {},
+  "rotate": "Rotate",
+  "@rotate": {},
   "save": "Save",
   "@save": {},
   "savedWithPath": "Saved: {path}",
