--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -11,7 +11,7 @@
   "delete": "Eliminar",
   "display": "Pantalla",
   "downloadStarted": "Descarga iniciada",
-  "dpi": "DPI:",
+  "dpi": "DPI",
   "drawSignature": "Dibujar firma",
   "errorWithMessage": "Error: {message}",
   "exportingPleaseWait": "Exportando... Por favor, espere",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "No se pudo guardar el PDF",
   "general": "General",
   "goTo": "Ir a:",
+  "image": "Imagen",
   "invalidOrUnsupportedFile": "Archivo inválido o no compatible",
   "language": "Idioma",
   "loadSignatureFromFile": "Cargar firma desde archivo",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "Continuo",
   "prev": "Anterior",
   "resetToDefaults": "Restablecer valores predeterminados",
+  "rotate": "Rotar",
   "save": "Guardar",
   "savedWithPath": "Guardado: {path}",
   "saveSignedPdf": "Guardar PDF firmado",
