--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -19,6 +19,7 @@
   "failedToSavePdf": "Échec de l'enregistrement du PDF",
   "general": "Général",
   "goTo": "Aller à :",
+  "image": "Image",
   "invalidOrUnsupportedFile": "Fichier invalide ou non pris en charge",
   "language": "Langue",
   "loadSignatureFromFile": "Charger une signature depuis un fichier",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "Continu",
   "prev": "Précédent",
   "resetToDefaults": "Rétablir les valeurs par défaut",
+  "rotate": "Rotation",
   "save": "Enregistrer",
   "savedWithPath": "Enregistré : {path}",
   "saveSignedPdf": "Enregistrer le PDF signé",
