--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -11,7 +11,7 @@
   "delete": "削除",
   "display": "表示",
   "downloadStarted": "ダウンロード開始",
-  "dpi": "DPI：",
+  "dpi": "DPI",
   "drawSignature": "署名をかく",
   "errorWithMessage": "エラー：{message}",
   "exportingPleaseWait": "エクスポート中…お待ちください",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "PDFの保存に失敗しました",
   "general": "一般",
   "goTo": "移動：",
+  "image": "画像",
   "invalidOrUnsupportedFile": "無効なファイルまたはサポートされていないファイル",
   "language": "言語",
   "loadSignatureFromFile": "ファイルから署名を読み込む",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "連続",
   "prev": "前へ",
   "resetToDefaults": "デフォルトに戻す",
+  "rotate": "回転",
   "save": "保存",
   "savedWithPath": "保存しました：{path}",
   "saveSignedPdf": "署名済みPDFを保存",
