--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -11,7 +11,7 @@
   "delete": "삭제",
   "display": "표시",
   "downloadStarted": "다운로드 시작됨",
-  "dpi": "DPI:",
+  "dpi": "DPI",
   "drawSignature": "서명 그리기",
   "errorWithMessage": "오류: {message}",
   "exportingPleaseWait": "내보내는 중... 잠시 기다려주세요",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "PDF 저장 실패",
   "general": "일반",
   "goTo": "이동:",
+  "image": "이미지",
   "invalidOrUnsupportedFile": "잘못된 파일이거나 지원되지 않는 파일입니다.",
   "language": "언어",
   "loadSignatureFromFile": "파일에서 서명 불러오기",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "연속",
   "prev": "이전",
   "resetToDefaults": "기본값으로 재설정",
+  "rotate": "회전",
   "save": "저장",
   "savedWithPath": "{path}에 저장됨",
   "saveSignedPdf": "서명된 PDF 저장",
