--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -11,7 +11,7 @@
   "delete": "Видалити",
   "display": "Відображення",
   "downloadStarted": "Завантаження розпочато",
-  "dpi": "DPI:",
+  "dpi": "DPI",
   "drawSignature": "Намалювати підпис",
   "errorWithMessage": "Помилка: {message}",
   "exportingPleaseWait": "Експортування... Зачекайте",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "Не вдалося зберегти PDF",
   "general": "Загальні",
   "goTo": "Перейти до:",
+  "image": "Зображення",
   "invalidOrUnsupportedFile": "Недійсний або непідтримуваний файл",
   "language": "Мова",
   "loadSignatureFromFile": "Завантажити підпис з файлу",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "Безперервний",
   "prev": "Попередня",
   "resetToDefaults": "Скинути до значень за замовчуванням",
+  "rotate": "Повернути",
   "save": "Зберегти",
   "savedWithPath": "Збережено: {path}",
   "saveSignedPdf": "Зберегти підписаний PDF",
