--- a/lib/l10n/app_zh_CN.arb
+++ b/lib/l10n/app_zh_CN.arb
@@ -11,7 +11,7 @@
   "delete": "删除",
   "display": "显示",
   "downloadStarted": "下载已开始",
-  "dpi": "DPI：",
+  "dpi": "DPI",
   "drawSignature": "绘制签名",
   "errorWithMessage": "错误：{message}",
   "exportingPleaseWait": "正在导出... 请稍候",
@@ -19,6 +19,7 @@
   "failedToSavePdf": "PDF 保存失败",
   "general": "常规",
   "goTo": "跳转到：",
+  "image": "图片",
   "invalidOrUnsupportedFile": "无效或不支持的文件",
   "language": "语言",
   "loadSignatureFromFile": "从文件加载签名",
@@ -34,6 +35,7 @@
   "pageViewContinuous": "连续",
   "prev": "上一页",
   "resetToDefaults": "恢复默认值",
+  "rotate": "旋转",
   "save": "保存",
   "savedWithPath": "已保存：{path}",
   "saveSignedPdf": "保存已签名的 PDF",
