--- a/lib/l10n/app_zh_TW.arb
+++ b/lib/l10n/app_zh_TW.arb
@@ -12,7 +12,7 @@
   "delete": "刪除",
   "display": "顯示",
   "downloadStarted": "已開始下載",
-  "dpi": "DPI：",
+  "dpi": "DPI",
   "drawSignature": "手寫簽名",
   "errorWithMessage": "錯誤：{message}",
   "exportingPleaseWait": "匯出中…請稍候",
@@ -20,6 +20,7 @@
   "failedToSavePdf": "儲存 PDF 失敗",
   "general": "一般",
   "goTo": "前往：",
+  "image": "圖片",
   "invalidOrUnsupportedFile": "無效或不支援的檔案",
   "language": "語言",
   "loadSignatureFromFile": "從檔案載入簽名",
@@ -35,6 +36,7 @@
   "pageViewContinuous": "連續",
   "prev": "上一頁",
   "resetToDefaults": "重設為預設值",
+  "rotate": "旋轉",
   "save": "儲存",
   "savedWithPath": "已儲存：{path}",
   "saveSignedPdf": "儲存已簽名 PDF",
