fix: rotation and scale of placed signature on PDF are not sync

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,4 +1,5 @@
 {
+  "adjustGraphic": "Grafik anpassen",
   "appTitle": "PDF-Signatur",
   "backgroundRemoval": "Hintergrund entfernen",
   "brightness": "Helligkeit",
