--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,7 @@
 {
   "@@locale": "en",
+  "adjustGraphic": "Adjust graphic",
+  "@adjustGraphic": {},
   "appTitle": "PDF Signature",
   "@appTitle": {},
   "backgroundRemoval": "Background removal",
