--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,4 +1,5 @@
 {
+  "adjustGraphic": "Ajustar gráfico",
   "appTitle": "Firma PDF",
   "backgroundRemoval": "Eliminar fondo",
   "brightness": "Brillo",
