--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,4 +1,5 @@
 {
+  "adjustGraphic": "Ajuster le graphique",
   "appTitle": "Signature PDF",
   "backgroundRemoval": "Suppression de l'arrière-plan",
   "brightness": "Luminosité",
