--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -1,4 +1,5 @@
 {
+  "adjustGraphic": "Регулювати графіку",
   "appTitle": "Підпис PDF",
   "backgroundRemoval": "Видалення фону",
   "brightness": "Яскравість",
