feat: add locking and unlocking functionality for signature placements

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -23,6 +23,7 @@
   "image": "Bild",
   "invalidOrUnsupportedFile": "Ungültige oder nicht unterstützte Datei",
   "language": "Sprache",
+  "lock": "Sperren",
   "loadSignatureFromFile": "Signatur aus Datei laden",
   "lockAspectRatio": "Seitenverhältnis sperren",
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "Drücken Sie lange oder klicken Sie mit der rechten Maustaste auf die Signatur, um sie zu bestätigen oder zu löschen.",
@@ -46,5 +47,6 @@
   "themeDark": "Dunkel",
   "themeLight": "Hell",
   "themeSystem": "System",
-  "undo": "Rückgängig"
+  "undo": "Rückgängig",
+  "unlock": "Entsperren"
 }
