--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -23,6 +23,7 @@
   "image": "Image",
   "invalidOrUnsupportedFile": "Fichier invalide ou non pris en charge",
   "language": "Langue",
+  "lock": "Verrouiller",
   "loadSignatureFromFile": "Charger une signature depuis un fichier",
   "lockAspectRatio": "Verrouiller le ratio largeur/hauteur",
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "Appuyez longuement ou cliquez droit sur la signature pour la confirmer ou la supprimer.",
@@ -46,5 +47,6 @@
   "themeDark": "Sombre",
   "themeLight": "Clair",
   "themeSystem": "Système",
-  "undo": "Annuler"
+  "undo": "Annuler",
+  "unlock": "Déverrouiller"
 }
