--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -23,6 +23,7 @@
   "image": "画像",
   "invalidOrUnsupportedFile": "無効なファイルまたはサポートされていないファイル",
   "language": "言語",
+  "lock": "ロック",
   "loadSignatureFromFile": "ファイルから署名を読み込む",
   "lockAspectRatio": "アスペクト比をロック",
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "署名を長押しまたは右クリックして、確認または削除します。",
@@ -46,5 +47,6 @@
   "themeDark": "ダーク",
   "themeLight": "ライト",
   "themeSystem": "システム",
-  "undo": "元に戻す"
+  "undo": "元に戻す",
+  "unlock": "ロック解除"
 }
