--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -23,6 +23,7 @@
   "image": "이미지",
   "invalidOrUnsupportedFile": "잘못된 파일이거나 지원되지 않는 파일입니다.",
   "language": "언어",
+  "lock": "잠금",
   "loadSignatureFromFile": "파일에서 서명 불러오기",
   "lockAspectRatio": "종횡비 고정",
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "서명을 길게 누르거나 마우스 오른쪽 버튼을 클릭하여 확인하거나 삭제합니다.",
@@ -46,5 +47,6 @@
   "themeDark": "다크",
   "themeLight": "라이트",
   "themeSystem": "시스템",
-  "undo": "실행 취소"
+  "undo": "실행 취소",
+  "unlock": "잠금 해제"
 }
