--- a/lib/l10n/app_uk.arb
+++ b/lib/l10n/app_uk.arb
@@ -23,6 +23,7 @@
   "image": "Зображення",
   "invalidOrUnsupportedFile": "Недійсний або непідтримуваний файл",
   "language": "Мова",
+  "lock": "Замкнути",
   "loadSignatureFromFile": "Завантажити підпис з файлу",
   "lockAspectRatio": "Зафіксувати співвідношення сторін",
   "longPressOrRightClickTheSignatureToConfirmOrDelete": "Довго натисніть або клацніть правою кнопкою миші на підпис, щоб підтвердити або видалити.",
@@ -46,5 +47,6 @@
   "themeDark": "Темна",
   "themeLight": "Світла",
   "themeSystem": "Системна",
-  "undo": "Відмінити"
+  "undo": "Відмінити",
+  "unlock": "Відмкнути"
 }
