feat: add theme color selection feat: drag-and-drop hints for signature cards

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -13,6 +13,7 @@
   "display": "Anzeige",
   "downloadStarted": "Download gestartet",
   "dpi": "DPI",
+  "dragOntoDocument": "Auf Dokument ziehen",
   "drawSignature": "Signatur zeichnen",
   "errorWithMessage": "Fehler: {message}",
   "exportingPleaseWait": "Exportiere… Bitte warten",
@@ -47,6 +48,11 @@
   "themeDark": "Dunkel",
   "themeLight": "Hell",
   "themeSystem": "System",
+  "themeColor": "Themenfarbe",
+  "themeColorBlue": "Blau",
+  "themeColorGreen": "Grün",
+  "themeColorRed": "Rot",
+  "themeColorPurple": "Lila",
   "undo": "Rückgängig",
   "unlock": "Entsperren"
 }
