--- a/lib/l10n/app_ko.arb
+++ b/lib/l10n/app_ko.arb
@@ -13,6 +13,7 @@
   "display": "표시",
   "downloadStarted": "다운로드 시작됨",
   "dpi": "DPI",
+  "dragOntoDocument": "문서로 끌어다 놓습니다",
   "drawSignature": "서명 그리기",
   "errorWithMessage": "오류: {message}",
   "exportingPleaseWait": "내보내는 중... 잠시 기다려주세요",
@@ -47,6 +48,11 @@
   "themeDark": "다크",
   "themeLight": "라이트",
   "themeSystem": "시스템",
+  "themeColor": "테마 색상",
+  "themeColorBlue": "파란색",
+  "themeColorGreen": "녹색",
+  "themeColorRed": "빨간색",
+  "themeColorPurple": "보라색",
   "undo": "실행 취소",
   "unlock": "잠금 해제"
 }
