--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -28,6 +28,10 @@
   "@downloadStarted": {},
   "dpi": "DPI",
   "@dpi": {},
+  "dragOntoDocument": "Drag onto document",
+  "@dragOntoDocument": {
+    "description": "Tooltip message for dragging signature card onto PDF document"
+  },
   "drawSignature": "Draw Signature",
   "@drawSignature": {},
   "errorWithMessage": "Error: {message}",
@@ -120,6 +124,16 @@
   "@themeLight": {},
   "themeSystem": "System",
   "@themeSystem": {},
+  "themeColor": "Theme color",
+  "@themeColor": {},
+  "themeColorBlue": "Blue",
+  "@themeColorBlue": {},
+  "themeColorGreen": "Green",
+  "@themeColorGreen": {},
+  "themeColorRed": "Red",
+  "@themeColorRed": {},
+  "themeColorPurple": "Purple",
+  "@themeColorPurple": {},
   "undo": "Undo",
   "@undo": {},
   "unlock": "Unlock",
