--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -13,6 +13,7 @@
   "display": "Pantalla",
   "downloadStarted": "Descarga iniciada",
   "dpi": "DPI",
+  "dragOntoDocument": "Arrastra sobre el documento",
   "drawSignature": "Dibujar firma",
   "errorWithMessage": "Error: {message}",
   "exportingPleaseWait": "Exportando... Por favor, espere",
@@ -47,6 +48,11 @@
   "themeDark": "Oscuro",
   "themeLight": "Claro",
   "themeSystem": "Sistema",
+  "themeColor": "Color del tema",
+  "themeColorBlue": "Azul",
+  "themeColorGreen": "Verde",
+  "themeColorRed": "Rojo",
+  "themeColorPurple": "Púrpura",
   "undo": "Deshacer",
   "unlock": "Desbloquear"
 }
