--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -13,6 +13,7 @@
   "display": "Affichage",
   "downloadStarted": "Téléchargement commencé",
   "dpi": "DPI :",
+  "dragOntoDocument": "Faites glisser sur le document",
   "drawSignature": "Dessiner une signature",
   "errorWithMessage": "Erreur : {message}",
   "exportingPleaseWait": "Exportation… Veuillez patienter",
@@ -47,6 +48,11 @@
   "themeDark": "Sombre",
   "themeLight": "Clair",
   "themeSystem": "Système",
+  "themeColor": "Couleur du thème",
+  "themeColorBlue": "Bleu",
+  "themeColorGreen": "Vert",
+  "themeColorRed": "Rouge",
+  "themeColorPurple": "Violet",
   "undo": "Annuler",
   "unlock": "Déverrouiller"
 }
